Bug 281506 - Unable to define the window title in Kwin rules
Summary: Unable to define the window title in Kwin rules
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 4.7.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-06 23:09 UTC by Alexandre Genin
Modified: 2011-09-09 18:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of the kwin dialog (french) (88.21 KB, image/png)
2011-09-06 23:09 UTC, Alexandre Genin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre Genin 2011-09-06 23:09:33 UTC
Created attachment 63456 [details]
Screenshot of the kwin dialog (french)

Version:           4.7.0 (using KDE 4.7.0) 
OS:                Linux

I tried to define a specific window title in Kwin window-specific settings, but the corresponding text field stays greyed out... I tried with several types of windows, the problem is always reproduced.

The same thing happens with the 'Extra role' and 'Machine' fields.

Reproducible: Always

Steps to Reproduce:
Create a new rule and try to modify the 'Window title' field

Actual Results:  
Nothing can be written in the text field, it stays disabled.

Expected Results:  
The text field becomes enabled :P
Comment 1 Thomas Lübking 2011-09-07 13:08:38 UTC
reproducable
apparently the there's some signal/slot connections missing...
Comment 2 Thomas Lübking 2011-09-09 16:20:07 UTC
Git commit 4096d0d1a7b5412eb55f31babbecd23fd37d45bf by Thomas Lübking.
Committed on 08/09/2011 at 22:18.
Pushed by luebking into branch 'KDE/4.7'.

add some missing connects for the ruleswidget

BUG: 281506

M  +5    -0    kwin/kcmkwin/kwinrules/ruleswidget.cpp

http://commits.kde.org/kde-workspace/4096d0d1a7b5412eb55f31babbecd23fd37d45bf
Comment 3 Thomas Lübking 2011-09-09 18:15:25 UTC
Git commit 88cbedb1e4f63c928e6dc8028d9f90238278e9d2 by Thomas Lübking.
Committed on 08/09/2011 at 22:18.
Pushed by luebking into branch 'master'.

add some missing connects for the ruleswidget

BUG: 281506
(cherry picked from commit 4096d0d1a7b5412eb55f31babbecd23fd37d45bf)

M  +5    -0    kwin/kcmkwin/kwinrules/ruleswidget.cpp

http://commits.kde.org/kde-workspace/88cbedb1e4f63c928e6dc8028d9f90238278e9d2