add some missing connects for the ruleswidget

BUG: 281506
(cherry picked from commit 4096d0d1a7b5412eb55f31babbecd23fd37d45bf)